--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,6 +2,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools" android:id="@+id/nav_graph" app:startDestination="@id/dashboardView">
-    <fragment android:id="@+id/dashboardView" android:name="com.google.ticketo.sample.DashboardView"
-              android:label="dashboard_fragment" tools:layout="@layout/dashboard_fragment"/>
+    <fragment android:id="@+id/dashboardView" android:name="com.google.ticketo.ui.DashBoard.DashboardView"
+              android:label="dashboard_fragment" tools:layout="@layout/dashboard_fragment">
+        <action android:id="@+id/action_dashboardView_to_loginView" app:destination="@id/loginView"/>
+    </fragment>
+    <fragment android:id="@+id/loginView" android:name="com.google.ticketo.ui.login.LoginView"
+              android:label="login_fragment" tools:layout="@layout/login_fragment"/>
 </navigation>
