--- a/app/src/main/res/drawable/shape_circle.xml
+++ b/app/src/main/res/drawable/shape_circle.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color=""/>
+            <solid android:color="@color/black"/>
             <!--shadow Color-->
         </shape>
     </item>
@@ -14,7 +14,7 @@
             android:top="0dp"
             android:bottom="3dp">
         <shape android:shape="oval">
-            <solid android:color="@color/lightgrey"/>//Background Color
+            <solid android:color="@color/black"/>
         </shape>
     </item>
 </layer-list>
