--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#79666C</color>
     <color name="black">#000000</color>
-
-
-
+    <color name="appBar">#202020</color>
+    <color name="backgroud">#121212</color>
+    <color name="white">#FFFFFF</color>
 </resources>
