--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,8 +10,17 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:background">@color/backgroud</item>
+        <item name="actionBarTheme">@style/AppBar</item>
     </style>
 
+    <style name="AppBar">
+        <item name="android:background">@color/appBar</item>
+    </style>
+
+    <style name="NavigationView">
+        <item name="android:background">@color/appBar</item>
+    </style>
 
     <style name="SplashScreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@drawable/bg_splash_screen</item>
