--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,8 @@
 <resources>
 
-    <!--Base application theme.-->
-    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-    <!--<item name="colorPrimary">@color/colorPrimary</item>-->
-    <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-    <!--<item name="colorAccent">@color/colorAccent</item>-->
-    <!--</style>-->
-
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="android:navigationBarColor">@color/black</item>
-        <item name="android:background">@color/backgroud</item>
+        <item name="android:background">@color/background</item>
         <item name="actionBarTheme">@style/AppBar</item>
     </style>
 
@@ -22,6 +14,9 @@
         <item name="android:background">@color/appBar</item>
     </style>
 
+    <style name="CardStyle">
+        <item name="android:background">@color/appBar</item>
+    </style>
     <style name="SplashScreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowBackground">@drawable/bg_splash_screen</item>
         <item name="android:navigationBarColor">@color/black</item>
