--- a/app/src/main/res/drawable/circle_shadow.xml
+++ b/app/src/main/res/drawable/circle_shadow.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/black"/>
+            <solid android:color="@color/white"/>
             <!--shadow Color-->
         </shape>
     </item>
@@ -17,4 +17,5 @@
             <solid android:color="@color/black"/>
         </shape>
     </item>
+
 </layer-list>
