--- a/app/src/main/res/drawable/shadow_line.xml
+++ b/app/src/main/res/drawable/shadow_line.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/black" android:endColor="@color/appBar" android:angle="90"/>
+    <gradient android:startColor="@color/background" android:endColor="@color/background" android:angle="90"/>
 </shape>
