--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -12,7 +12,21 @@
             android:layout_height="match_parent">
 
 
+        <ImageView
+                android:id="@+id/my_profile_profile_pic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_launcher_foreground"
+                android:background="@drawable/circle_border"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
+                app:layout_constraintBottom_toTopOf="@+id/my_profile_card_view"
+                android:elevation="2dp"
+        />
+
         <com.google.android.material.card.MaterialCardView
+                android:id="@+id/my_profile_card_view"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -20,20 +34,19 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="12dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:theme="@style/AppBar"
-                app:cardCornerRadius="12dp" app:cardElevation="1dp">
-            <ImageView
-                    android:id="@+id/my_profile_profile_pic"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_launcher_foreground"
-                    android:background="@drawable/shape_circle" android:layout_marginBottom="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                app:cardCornerRadius="12dp"
+                app:cardElevation="1dp">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
