--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#000000</color>
     <color name="appBar">#202020</color>
     <color name="background">#121212</color>
+    <color name="background_gradient">#080808</color>
     <color name="white">#FFFFFF</color>
     <color name="cardColor">#1D1D1D</color>
 </resources>
