--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -16,8 +16,10 @@
                 android:id="@+id/my_profile_profile_pic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_launcher_foreground"
+                android:src="@drawable/common_google_signin_btn_icon_disabled"
                 android:background="@drawable/circle_border"
+                android:padding="20dp"
+                android:scaleType="centerInside"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
@@ -34,7 +36,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="12dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="90dp"
                 android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:theme="@style/AppBar"
@@ -43,7 +45,8 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent" android:layout_marginTop="8dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
