--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:background">@color/background</item>
         <item name="actionBarTheme">@style/AppBar</item>
+        <item name="android:fontFamily">@font/font_family</item>
     </style>
 
     <style name="AppBar">
