--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -1,56 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<layout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.profile.MyProfileView">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-        <ImageView
-                android:id="@+id/my_profile_profile_pic"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/common_google_signin_btn_icon_disabled"
-                android:background="@drawable/circle_border"
-                android:padding="20dp"
-                android:scaleType="centerInside"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
-                app:layout_constraintBottom_toTopOf="@+id/my_profile_card_view"
-                android:elevation="2dp"
+    <data>
+        <variable
+                name="user"
+                type="com.google.ticketo.model.User"
         />
+    </data>
 
-        <com.google.android.material.card.MaterialCardView
-                android:id="@+id/my_profile_card_view"
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.profile.MyProfileView">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="12dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="12dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="90dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:theme="@style/AppBar"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="1dp">
+                android:layout_height="match_parent">
+            <ProgressBar
+                    android:id="@+id/my_profile_progress_bar"
+                    android:visibility="visible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/my_profile_containter"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <ImageView
+                    android:id="@+id/my_profile_profile_pic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_launcher_foreground"
+                    android:background="@drawable/circle_border"
+                    android:padding="20dp"
+                    android:scaleType="centerInside"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
+                    app:layout_constraintBottom_toTopOf="@+id/my_profile_card_view"
+                    android:elevation="2dp"
+                    profilePic="@{user.picture}"
+            />
+
+            <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/my_profile_card_view"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toTopOf="parent">
+                    android:layout_height="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="12dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="12dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="90dp"
+                    android:layout_marginBottom="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:theme="@style/AppBar"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="1dp">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" android:layout_marginTop="8dp"
+                        app:layout_constraintTop_toTopOf="parent">
 
-        </com.google.android.material.card.MaterialCardView>
+                    <TextView
+                            android:id="@+id/my_profile_user_name"
+                            android:text="@{user.name}"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
+                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
+                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+</layout>
