--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,10 @@
               android:label="dashboard_fragment" tools:layout="@layout/dashboard_fragment">
         <action android:id="@+id/action_dashboardView_to_myProfileView" app:destination="@id/myProfileView"
         />
+        <action android:id="@+id/action_dashboardView_to_searchView" app:destination="@id/searchView"/>
     </fragment>
     <fragment android:id="@+id/myProfileView" android:name="com.google.ticketo.ui.profile.MyProfileView"
               android:label="my_profile_fragment" tools:layout="@layout/my_profile_fragment"/>
+    <fragment android:id="@+id/searchView" android:name="com.google.ticketo.ui.search.SearchView"
+              android:label="search_fragment" tools:layout="@layout/search_fragment"/>
 </navigation>
