--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -11,23 +11,87 @@
             android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/dashboard_fragment_appbar_layout"
                 android:layout_width="match_parent"
-                android:layout_height="300dp">
+                android:layout_height="wrap_content">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/dashboard_fragment_colapsing_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="140dp"
                     app:contentScrim="@color/appBar"
-                    app:expandedTitleGravity="top"
                     android:background="@color/appBar"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                    app:layout_scrollFlags="scroll"
+                    app:expandedTitleGravity="center">
 
                 <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/dashboard_fragment_toolbar"
                         android:layout_width="match_parent"
                         android:layout_height="?attr/actionBarSize"
-                        app:layout_collapseMode="pin"/>
+                        android:background="@color/appBar"
+                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
+                </androidx.appcompat.widget.Toolbar>
+
+                <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="60dp"
+                        android:src="@drawable/logo_appbar"
+                        android:adjustViewBounds="true"
+                        android:layout_gravity="center"
+                        app:layout_collapseMode="parallax"
+                />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            <LinearLayout
+                    android:id="@+id/dashboard_fragment_search_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@color/appBar">
+
+                <androidx.cardview.widget.CardView
+                        android:id="@+id/dashboard_fragment_search_cardview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:cardCornerRadius="5dp"
+                        android:layout_marginStart="6dp"
+                        android:layout_marginEnd="6dp"
+                        android:transitionName="search_bar">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/white">
+
+                        <ImageView
+                                android:id="@+id/dashboard_fragment_logo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="30dp"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/ic_search_black_24dp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:background="@color/white"
+                                android:tint="@color/appBar"
+                        />
+                        <TextView
+                                android:layout_width="0dp"
+                                android:layout_height="30dp"
+                                android:text="@string/search2"
+                                android:textSize="22sp"
+                                android:gravity="bottom|start"
+                                android:layout_gravity="center_vertical"
+                                app:layout_constraintStart_toEndOf="@id/dashboard_fragment_logo"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                android:background="@color/white"
+                                android:textColor="@color/appBar"
+                                android:layout_marginStart="5dp"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -62,11 +126,7 @@
                           android:text="11"/>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="12"/>
-
-
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
 </FrameLayout>
