--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -103,13 +103,29 @@
             <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                           android:orientation="vertical">
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="1"/>
+                          android:text="W twoim kraju"/>
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp">
+                </androidx.recyclerview.widget.RecyclerView>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="2"/>
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp">
+                </androidx.recyclerview.widget.RecyclerView>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="3"/>
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp">
+                </androidx.recyclerview.widget.RecyclerView>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="4"/>
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp">
+                </androidx.recyclerview.widget.RecyclerView>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
                           android:text="5"/>
                 <TextView android:layout_width="match_parent" android:layout_height="100dp"
