--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -100,16 +100,42 @@
                 android:layout_height="match_parent"
                 app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
-                          android:orientation="vertical">
-                <TextView android:layout_width="match_parent" android:layout_height="100dp"
-                          android:text="W twoim kraju"/>
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/dashboard_fragment_events_in_country"
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                <ProgressBar
+                        android:id="@+id/dashboard_fragment_progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:visibility="visible"
+                        android:layout_marginTop="100dp"
+                        android:layout_centerHorizontal="true"
+                        />
+                <LinearLayout
+                        android:id="@+id/dashboard_fragment_events_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                </androidx.recyclerview.widget.RecyclerView>
-            </LinearLayout>
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+                    <TextView android:layout_width="match_parent"
+                              android:layout_height="30dp"
+                              android:text="W twoim kraju"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/dashboard_fragment_events_in_country"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                    </androidx.recyclerview.widget.RecyclerView>
+                    <TextView android:layout_width="match_parent"
+                              android:layout_height="30dp"
+                              android:text="W twoim miescie"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/dashboard_fragment_events_in_city"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+                    </androidx.recyclerview.widget.RecyclerView>
+                </LinearLayout>
+            </RelativeLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </FrameLayout>
