--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,4 +12,6 @@
               android:label="my_profile_fragment" tools:layout="@layout/my_profile_fragment"/>
     <fragment android:id="@+id/searchView" android:name="com.google.ticketo.ui.search.SearchView"
               android:label="search_fragment" tools:layout="@layout/search_fragment"/>
+    <fragment android:id="@+id/eventDetailsView" android:name="com.google.ticketo.ui.event_details.EventDetailsView"
+              android:label="event_details_fragment" tools:layout="@layout/event_details_fragment"/>
 </navigation>
