--- a/app/src/main/res/layout/event_details_fragment.xml
+++ b/app/src/main/res/layout/event_details_fragment.xml
@@ -17,9 +17,122 @@
                 android:id="@+id/event_details_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:foreground="@drawable/gradient_bottom"
                 android:transitionName="event_image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:eventPic="@{event.imageUrl}"/>
+
+        <com.google.android.material.button.MaterialButton
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="@string/buy"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                app:layout_constraintStart_toStartOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="@+id/textView4"/>
+
+        <com.google.android.material.button.MaterialButton
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="@string/sell"
+                app:layout_constraintEnd_toEndOf="@+id/textView5"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
+                app:layout_constraintStart_toStartOf="@+id/textView5"/>
+
+        <TextView
+                android:text="@{event.name}"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textSize="35sp"
+                android:singleLine="true"
+                android:background="#07000000"
+                android:id="@+id/textView8"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                app:layout_constraintBottom_toBottomOf="@+id/event_details_image"
+                android:layout_marginBottom="16dp"/>
+        <ImageView
+                android:src="@drawable/ic_location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@color/white"
+                android:id="@+id/imageView"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_image"/>
+        <TextView
+                android:text="@{event.location.city}"
+                tools:text="Wrocław"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_details_location_city"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_image"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginStart="8dp"/>
+        <ImageView
+                android:src="@drawable/ic_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:tint="@color/white"
+                android:id="@+id/imageView2"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_image"/>
+        <TextView
+                android:id="@+id/event_details_date"
+                tools:text="01.01.2020"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_image"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                android:layout_marginEnd="8dp"/>
+        <TextView
+                android:text="@{event.location.name}"
+                tools:text="Akademia Club"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/event_details_location_name"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_location_city"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
+                android:layout_marginStart="8dp"/>
+        <TextView
+                android:id="@+id/event_details_time"
+                tools:text="20:00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_date"
+                app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                android:layout_marginEnd="8dp"/>
+        <TextView
+                android:text="21"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:id="@+id/textView4"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_location_name"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="70dp"/>
+        <TextView
+                android:text="7"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:id="@+id/textView5"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/event_details_time"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="70dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
