--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:navigationBarColor">@color/black</item>
         <item name="android:background">@color/background</item>
+        <item name="colorPrimary">@color/primary</item>
         <item name="actionBarTheme">@style/AppBar</item>
         <item name="android:fontFamily">@font/font_family</item>
         <item name="android:windowContentTransitions">true</item>
