--- a/app/src/main/res/layout/dashboard_fragment.xml
+++ b/app/src/main/res/layout/dashboard_fragment.xml
@@ -69,7 +69,7 @@
                                 android:layout_height="30dp"
                                 android:transitionName="event_image"
                                 android:adjustViewBounds="true"
-                                android:src="@drawable/ic_search_black_24dp"
+                                android:src="@drawable/ic_search"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintBottom_toBottomOf="parent"
