--- a/app/src/main/res/layout/events_by_city_fragment.xml
+++ b/app/src/main/res/layout/events_by_city_fragment.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.favourites.FavouritesView">
+        tools:context=".ui.search.eventsByCity.EventsByCityView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/favourites_toolbar"
+            android:id="@+id/events_by_city_toolbar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_height"
             android:background="@color/appBar"
@@ -17,7 +17,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-                android:id="@+id/favourites_back"
+                android:id="@+id/events_by_city_back"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginStart="16dp"
@@ -29,41 +29,24 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:id="@+id/textView"
+                android:id="@+id/events_by_city_toolbar_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:background="@null"
-                android:text="@string/favourites"
                 android:textSize="22sp"
+                android:text="@string/events_in_city"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/favourites_back"
+                app:layout_constraintStart_toEndOf="@+id/events_by_city_back"
                 app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/favourites_events"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/favourites_toolbar"
-            app:layout_constraintVertical_bias="1.0">
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <TextView
-            android:id="@+id/favourites_empty_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:textSize="20sp"
-            android:text="@string/empty_list"
-            app:layout_constraintBottom_toBottomOf="@+id/favourites_events"
-            app:layout_constraintEnd_toEndOf="@+id/favourites_events"
-            app:layout_constraintStart_toStartOf="@+id/favourites_events"
-            app:layout_constraintTop_toTopOf="@+id/favourites_events" />
+            app:layout_constraintTop_toBottomOf="@+id/events_by_city_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
