--- a/app/src/main/res/layout/events_by_city_fragment.xml
+++ b/app/src/main/res/layout/events_by_city_fragment.xml
@@ -42,8 +42,11 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/event_by_city_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
