--- a/app/src/main/res/layout/my_profile_fragment.xml
+++ b/app/src/main/res/layout/my_profile_fragment.xml
@@ -11,77 +11,179 @@
         />
     </data>
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.profile.MyProfileView">
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/my_profile_toolbar">
+
             <ProgressBar
                     android:id="@+id/my_profile_progress_bar"
-                    android:visibility="visible"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    android:layout_height="wrap_content"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/my_profile_container"
-                android:visibility="gone"
-                tools:visibility="visible"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="0dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/my_profile_toolbar"
+                tools:visibility="visible">
 
             <ImageView
                     android:id="@+id/my_profile_profile_pic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_launcher_foreground"
                     android:background="@drawable/circle_border"
+                    android:elevation="2dp"
                     android:padding="20dp"
                     android:scaleType="centerInside"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
+                    android:src="@drawable/ic_launcher_foreground"
                     app:layout_constraintBottom_toTopOf="@+id/my_profile_card_view"
-                    android:elevation="2dp"
-                    app:profilePic="@{user.picture}"
-            />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/my_profile_card_view"
+                    app:profilePic="@{user.picture}" />
 
             <com.google.android.material.card.MaterialCardView
                     android:id="@+id/my_profile_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="12dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="12dp"
-                    app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginTop="90dp"
+                    android:layout_marginEnd="12dp"
                     android:layout_marginBottom="16dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     android:theme="@style/AppBar"
                     app:cardCornerRadius="12dp"
-                    app:cardElevation="1dp">
+                    app:cardElevation="1dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" android:layout_marginTop="8dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="8dp"
                         app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                             android:id="@+id/my_profile_user_name"
-                            android:text="@{user.name}"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
-                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-                    />
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="100dp"
+                            android:layout_marginEnd="8dp"
+                            android:background="@null"
+                            android:text="@{user.name}"
+                            android:textSize="28sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:text="Jan Kowalski" />
+
+                    <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="64dp"
+                            android:layout_marginTop="64dp"
+                            android:background="@null"
+                            android:text="@string/recommend_you"
+                            android:textSize="20sp"
+                            app:layout_constraintEnd_toStartOf="@+id/my_profile_user_name"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_user_name" />
+
+                    <TextView
+                            android:id="@+id/textView4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="64dp"
+                            android:layout_marginEnd="64dp"
+                            android:background="@null"
+                            android:text="@string/warn_you"
+                            android:textSize="20sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/my_profile_user_name"
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_user_name" />
+
+                    <TextView
+                            android:id="@+id/my_profile_recommend"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView2"
+                            app:layout_constraintStart_toStartOf="@+id/textView2"
+                            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+                    <TextView
+                            android:id="@+id/my_profile_warn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView4"
+                            app:layout_constraintStart_toStartOf="@+id/textView4"
+                            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+                    <TextView
+                            android:id="@+id/textView3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:text="@string/you_are_buying"
+                            android:background="@null"
+                            android:layout_marginTop="48dp"
+                            app:layout_constraintEnd_toEndOf="@+id/my_profile_recommend"
+                            app:layout_constraintStart_toStartOf="@+id/my_profile_recommend"
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_recommend" />
+
+                    <TextView
+                            android:id="@+id/textView5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20sp"
+                            android:text="@string/you_are_selling"
+                            android:background="@null"
+                            android:layout_marginTop="48dp"
+                            app:layout_constraintEnd_toEndOf="@+id/my_profile_warn"
+                            app:layout_constraintStart_toStartOf="@+id/my_profile_warn"
+                            app:layout_constraintTop_toBottomOf="@+id/my_profile_warn" />
+
+                    <TextView
+                            android:id="@+id/my_profile_buy_counter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView3"
+                            app:layout_constraintStart_toStartOf="@+id/textView3"
+                            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+                    <TextView
+                            android:id="@+id/my_profile_sell_counter"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="24dp"
+                            app:layout_constraintEnd_toEndOf="@+id/textView5"
+                            app:layout_constraintStart_toStartOf="@+id/textView5"
+                            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -89,5 +191,41 @@
             </com.google.android.material.card.MaterialCardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </FrameLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/my_profile_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/toolbar_height"
+                android:background="@color/appBar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                    android:id="@+id/my_profile_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="16dp"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:src="@drawable/ic_arrow_back"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:background="@null"
+                    android:text="@string/my_account"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/my_profile_back"
+                    app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
