--- a/app/src/main/res/layout/item_dashboard_event.xml
+++ b/app/src/main/res/layout/item_dashboard_event.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
                 name="event"
-                type="com.google.ticketo.model.Event"/>
+                type="com.google.ticketo.model.Event" />
     </data>
 
-    <LinearLayout android:orientation="vertical"
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content">
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -19,27 +21,26 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="120dp"
                     android:layout_height="wrap_content"
-                    android:background="@color/white">
+                    android:background="@color/background">
 
                 <ImageView
                         android:id="@+id/item_dashboard_event_image"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
                         android:transitionName="event_image"
                         app:eventPic="@{event.imageUrl}"
-                />
-
-                <com.google.android.material.textview.MaterialTextView
-                        android:text="@{event.name}"
-                        android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        app:layout_constraintTop_toBottomOf="@+id/item_dashboard_event_image"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:text="@{event.name}"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/item_dashboard_event_image" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
