--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:navigationBarColor">@color/black</item>
-        <item name="android:background">@color/background</item>
+        <item name="android:colorBackground">@color/background</item>
         <item name="colorPrimary">@color/primary</item>
         <item name="actionBarTheme">@style/AppBar</item>
         <item name="android:fontFamily">@font/font_family</item>
@@ -30,6 +30,5 @@
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-
 
 </resources>
